# BioCroissant

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: README.md
docs/guides/: README.md
docs/specification/: README.md
examples/: README.md
examples/omop/: README.md
schema/: README.md
schema/context/: README.md
schema/definitions/: README.md
schema/value-domains/: README.md
src/: README.md
src/biocroissant/: README.md  __init__.py
src/biocroissant/cli/: README.md  __init__.py  main.py
src/biocroissant/converters/: README.md  __init__.py
src/biocroissant/converters/omop/: README.md  __init__.py
src/biocroissant/core/: README.md  __init__.py
src/biocroissant/validation/: README.md  __init__.py
tests/: README.md  __init__.py
